# InjectX

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
.context/: kickoff.md
.context/agents/: sessions.md
.context/flaws/: log.md
.context/inefficiencies/: log.md
.context/memory/agents/: sessions.md
.context/memory/features/: sni-host-hunter.md
.context/memory/flaws/: log.md
.context/memory/inefficiencies/: log.md
.context/memory/plans/: decisions.md
.context/memory/reviews/: 2026-07-15-review-2.md  2026-07-15-review-3.md  2026-07-15-review-4.md  2026-07-15-review-5.md  2026-07-15-review-6.md  2026-07-15-review-7.md  2026-07-15-review-8.md  2026-07-15-review-9.md  2026-07-16-review-2.md  2026-07-16-review-3.md  2026-07-16-review-4.md  2026-07-16-review-5.md  2026-07-16-review-6.md  2026-07-16-review.md  2026-07-23-feature-review.md  2026-07-24-n17-review.md  2026-07-24-phase2-review.md  2026-07-24-phase3-review.md  2026-07-24-review.md  2026-07-26-deps-review.md  2026-07-26-sweep-review.md
.context/memory/system/: ai-models.md  environments.md
.context/memory/tasks/: backlog.md  current.md
.context/memory/user/: identity.md
.context/memory/workflows/: active.md
.context/plans/: decisions.md
.context/reviews/: 2026-07-15-review.md
.context/system/: ai-models.md  environments.md
.context/tasks/: backlog.md  current.md
.context/user/: preferences.md
.context/workflows/: active.md
assets/configs/: README.md
assets/configs/dark/: YouTube 4hrs.dark  Youtube Gcp 5h.dark  airtel unlimited Trojan🥶.dark  vmess bullet speeds stable 🥶🔥.dark
assets/configs/ehi/: TelkomNet.ehi  Trojan Airtel 🥶.ehi  ethiotelecom.ehi  ssl UK🥶.ehi  vmess bullet stable.ehi  🐾™AIRTEL.ehi
assets/configs/hc/: Airtelke (3).hc  SSH UDP CUSTOM ✓ (4).hc  Saf Tiktok bypass.hc  Snapchat & Tiktok bypass.hc  WIFI BP & YT BP.hc  bypass.hc  saf cap 1 new v2🥶.hc  saf cap 2 new v2🥶.hc  saf cap 3 new v2🥶.hc  saf cap 4 new v2🥶.hc  saf cap 5new v2🥶.hc  saf cap 6 new v2🥶.hc  saf cap 7 new v2🥶.hc  universal-kickoff.md
assets/configs/lnk/: airtel unlimited bullet speeds no expiry 🥶 (2).lnk.removeme
assets/configs/tls/: airtel unlimited ❤️🥶 6516665 (2).tls
assets/configs/ziv/: safпет ² цdp.ziv  safпет цdp (2).ziv  safпет цdp ² (2).ziv  safпет цdp ².ziv  safпет цdp ¹.ziv  safпет цdp.ziv
backend/: __init__.py  main.py  pyproject.toml  requirements.txt
backend/audit/: __init__.py  live_log.py  trace.py
backend/decrypt/: __init__.py  dark_decrypt.py  ehi_decrypt.py  ehi_v2_decrypt.py  hat_decrypt.py  hc_decrypt.py  hc_v27_decrypt.py  keys.py  npv_decrypt.py  nsh_decrypt.py  router.py  tls_decrypt.py  vhd_decrypt.py  ziv_decrypt.py
backend/ir/: __init__.py  models.py
backend/parser/: __init__.py  dark_parser.py  detector.py  ehi_parser.py  hat_parser.py  hc_parser.py  npv_parser.py  nsh_parser.py  parse_engine.py  tls_parser.py
backend/snihunter/: __init__.py  apply.py  defensive.py  dns_check.py  export.py  models.py  portcheck.py  probe.py  reverseip.py  store.py
backend/snihunter/data/: portal_indicators.txt
backend/snihunter/data/seedlists/: README.md  airtel-ke.txt  safaricom-ke.txt  telkom-ke.txt
backend/snihunter/sources/: __init__.py  certstream.py  crtsh.py  seedlist.py
backend/tests/: test_certstream_source.py  test_crtsh_source.py  test_dark_decode.py  test_dns_check.py  test_env_config.py  test_keyfile_loading.py  test_path_validation.py  test_path_validation_seeds.py  test_portcheck.py  test_reverseip.py  test_sample_parsing.py  test_seedlist_loader.py  test_sni_apply.py  test_sni_defensive.py  test_sni_export.py  test_sni_models.py  test_sni_probe_result.py  test_ziv_decode.py
backend/tunnel/: __init__.py
docs/: InjectX-Architecture.md  key-extraction.md  setup-guide.md
frontend/: index.html  main.js  preload.js
frontend/src/scripts/: api.js  renderer.js
frontend/src/styles/: main.css
